--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -12,38 +12,43 @@ pageRef = "/about"
 weight = 2
 
 [[main]]
-name = "Elements"
-pageRef = "/elements"
+name = "Blog"
+pageRef = "/blog"
 weight = 3
 
 [[main]]
-weight = 4
-name = "Pages"
-
-[[main]]
-parent = "Pages"
-name = "Blog"
-pageRef = "/blog"
-
-[[main]]
-parent = "Pages"
-name = "Contact"
-pageRef = "/contact"
-
-[[main]]
-parent = "Pages"
 name = "Authors"
 pageRef = "/authors"
+weight = 4
 
-[[main]]
-parent = "Pages"
-name = "Categories"
-pageRef = "/categories"
+# [[main]]
+# weight = 5
+# name = "Pages"
 
-[[main]]
-parent = "Pages"
-name = "404 Page"
-pageRef = "/404"
+# [[main]]
+# parent = "Pages"
+# name = "Blog"
+# pageRef = "/blog"
+
+# [[main]]
+# parent = "Pages"
+# name = "Contact"
+# pageRef = "/contact"
+
+# [[main]]
+# parent = "Pages"
+# name = "Authors"
+# pageRef = "/authors"
+
+# [[main]]
+# parent = "Pages"
+# name = "Categories"
+# pageRef = "/categories"
+
+# [[main]]
+# parent = "Pages"
+# name = "404 Page"
+# pageRef = "/404"
 
 
 # footer menu
@@ -52,12 +57,12 @@ name = "About"
 pageRef = "/about"
 weight = 1
 
-[[footer]]
-name = "Elements"
-pageRef = "/elements"
-weight = 2
+# [[footer]]
+# name = "Elements"
+# pageRef = "/elements"
+# weight = 2
 
 [[footer]]
 name = "Privacy Policy"
 pageRef = "/privacy-policy"
-weight = 3
+weight = 2
