--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "theme-setup": "node ./scripts/themeSetup.js",
     "update-theme": "node ./scripts/themeUpdate.js",
     "format": "prettier -w .",
-    "deploy": "gh-pages -d public"
+    "deploy": "npm run build && gh-pages -d public"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
